@@ -4,36 +4,46 @@ import java.util.List;
 import java.util.Scanner;
 
 /**
- * Лабораторна робота №3
- * <p>
- * Мета: Використовуючи класи з лабораторної №2 (Letter, Word, Sentence, Text, Punctuation),
- * виконати завдання: у кожному слові видалити всі попередні входження останньої літери.
- * <p>
- * Вимоги:
- * - Використовувати створені класи
- * - Нормалізація пробілів
- * - Коректна обробка знаків пунктуації
- * - Код відповідає Google Java Style Guide
- * - Повна Javadoc-документація
+ * Лабораторна робота №X
+ * Тема: Відношення між класами в мові програмування Java
+ * Мета: Ознайомлення з відношеннями між класами в мові програмування Java.
+ *       Здобуття навичок у використанні відношень між класами в мові програмування Java.
  *
- * @author Твоє ім'я
+ * Завдання:
+ * - Використовуючи класи Letter, Word, Sentence, Text, Punctuation
+ * - У кожному слові видалити всі попередні входження останньої літери
+ * - Забезпечити нормалізацію пробілів
+ * - Коректно обробляти знаки пунктуації
+ *
+ * Демонструються відношення:
+ * - Композиція (Text → Sentence → Word → Letter, Sentence → Punctuation)
+ * - Агрегація (List як контейнер)
+ * - Використання допоміжних класів
+ *
+ * @author Ткаченко Костянтин
+ * @group ІП-з31к
  */
 public class TextProcessor {
 
-    /** Точка входу в програму. */
+    public static void main(String[] args) {
+        // Усі основні змінні оголошуються та ініціалізуються у виконавчому методі
 
-
-    /** Виконавчий метод — містить усю логіку програми. */
-    public void run() {
+        String inputText;
+        Text textObject;
+        String processingResult;
         try (Scanner scanner = new Scanner(System.in, StandardCharsets.UTF_8)) {
+
             System.out.println("Введіть текст:");
-            String input = scanner.nextLine();
+            inputText = scanner.nextLine();
 
-            Text text = Text.fromString(input);
-            String result = text.processAndToString();
+            // Створення та обробка об'єкта Text
+            textObject = Text.fromString(inputText);
+            processingResult = textObject.processAndToString();
 
-            System.out.println("Результат:");
-            System.out.println(result.isEmpty() ? "(порожній рядок)" : result);
+            System.out.println("\nРезультат обробки:");
+            System.out.println(processingResult.isEmpty()
+                    ? "(порожній рядок)"
+                    : processingResult);
 
         } catch (Exception e) {
             System.err.println("Помилка: " + e.getMessage());
@@ -42,15 +52,15 @@ public class TextProcessor {
     }
 }
 
-/** Клас, що представляє одну літеру. */
+/** Клас, що представляє одну літеру (найнижчий рівень ієрархії). */
 class Letter {
     private final char value;
 
-    Letter(char value) {
+    public Letter(char value) {
         this.value = value;
     }
 
-    char getValue() {
+    public char getValue() {
         return value;
     }
 
@@ -60,51 +70,56 @@ class Letter {
     }
 }
 
-/** Клас, що представляє слово — масив літер. */
+/** Клас, що представляє слово — композиція з об'єктів Letter. */
 class Word {
     private final List<Letter> letters = new ArrayList<>();
 
-    Word(String str) {
+    public Word(String str) {
         for (char c : str.toCharArray()) {
             letters.add(new Letter(c));
         }
     }
 
-    /** Видаляє всі попередні входження останньої літери (завдання). */
-    Word transform() {
+    private Word(List<Letter> transformedLetters) {
+        this.letters.addAll(transformedLetters);
+    }
+
+    /**
+     * Виконує перетворення слова за завданням лабораторної
+     */
+    public Word transform() {
         if (letters.size() <= 1) {
             return this;
         }
-        char lastChar = letters.get(letters.size() - 1).getValue();
 
+        char lastChar = letters.getLast().getValue();
         List<Letter> transformed = new ArrayList<>();
+
         for (int i = 0; i < letters.size() - 1; i++) {
             if (letters.get(i).getValue() != lastChar) {
                 transformed.add(letters.get(i));
             }
         }
-        transformed.add(letters.get(letters.size() - 1));
+        transformed.add(letters.getLast());
 
         return new Word(transformed);
-    }
-
-    private Word(List<Letter> list) {
-        letters.addAll(list);
     }
 
     @Override
     public String toString() {
         StringBuilder sb = new StringBuilder();
-        for (Letter l : letters) sb.append(l.getValue());
+        for (Letter letter : letters) {
+            sb.append(letter.getValue());
+        }
         return sb.toString();
     }
 }
 
-/** Клас, що представляє розділовий знак. */
+/** Клас, що представляє знак пунктуації. */
 class Punctuation {
     private final char sign;
 
-    Punctuation(char sign) {
+    public Punctuation(char sign) {
         this.sign = sign;
     }
 
@@ -114,15 +129,15 @@ class Punctuation {
     }
 }
 
-/** Клас, що представляє речення — послідовність слів і знаків пунктуації. */
+/** Клас, що представляє речення — композиція з Word та Punctuation. */
 class Sentence {
-    final List<Object> elements = new ArrayList<>(); // Word або Punctuation
+    public final List<Object> elements = new ArrayList<>();  // Word або Punctuation
 
-    void addWord(Word word) {
+    public void addWord(Word word) {
         elements.add(word.transform());
     }
 
-    void addPunctuation(char sign) {
+    public void addPunctuation(char sign) {
         elements.add(new Punctuation(sign));
     }
 
@@ -130,13 +145,13 @@ class Sentence {
     public String toString() {
         StringBuilder sb = new StringBuilder();
         for (int i = 0; i < elements.size(); i++) {
-            Object el = elements.get(i);
-            sb.append(el instanceof Word w ? w.toString() : ((Punctuation) el).toString());
+            Object current = elements.get(i);
+            sb.append(current);
 
+            // Логіка пробілів: після слова + перед словом (крім після пунктуації)
             if (i < elements.size() - 1) {
                 Object next = elements.get(i + 1);
-                boolean needSpace = (el instanceof Word) || (next instanceof Word);
-                if (needSpace) {
+                if (current instanceof Word || next instanceof Word) {
                     sb.append(' ');
                 }
             }
@@ -145,18 +160,13 @@ class Sentence {
     }
 }
 
-/** Клас, що представляє текст — масив речень. */
+/** Клас, що представляє текст — композиція з об'єктів Sentence. */
 class Text {
     private final List<Sentence> sentences = new ArrayList<>();
 
-    private Text() {}
+    private Text() {
+    }
 
-    /**
-     * Створює об'єкт Text з рядка.
-     *
-     * @param input вхідний текст
-     * @return оброблений об'єкт Text
-     */
     public static Text fromString(String input) {
         Text text = new Text();
         String normalized = input.replaceAll("\\s+", " ").trim();
@@ -168,7 +178,7 @@ class Text {
             char c = normalized.charAt(i);
 
             if (c == ' ') {
-                if (wordBuffer.length() > 0) {
+                if (!wordBuffer.isEmpty()) {
                     currentSentence.addWord(new Word(wordBuffer.toString()));
                     wordBuffer.setLength(0);
                 }
@@ -176,14 +186,15 @@ class Text {
             }
 
             if (isPunctuation(c)) {
-                if (wordBuffer.length() > 0) {
+                if (!wordBuffer.isEmpty()) {
                     currentSentence.addWord(new Word(wordBuffer.toString()));
                     wordBuffer.setLength(0);
                 }
                 currentSentence.addPunctuation(c);
 
-                boolean isSentenceEnd = (c == '.' || c == '!' || c == '?') &&
-                        (i + 1 >= normalized.length() || !isPunctuation(normalized.charAt(i + 1)));
+                // Визначення кінця речення
+                boolean isSentenceEnd = (c == '.' || c == '!' || c == '?')
+                        && (i + 1 >= normalized.length() || Character.isWhitespace(normalized.charAt(i + 1)));
 
                 if (isSentenceEnd && !currentSentence.elements.isEmpty()) {
                     text.sentences.add(currentSentence);
@@ -194,7 +205,8 @@ class Text {
             }
         }
 
-        if (wordBuffer.length() > 0) {
+        // Останнє слово та останнє речення
+        if (!wordBuffer.isEmpty()) {
             currentSentence.addWord(new Word(wordBuffer.toString()));
         }
         if (!currentSentence.elements.isEmpty()) {
@@ -208,16 +220,16 @@ class Text {
         return ",.!?;:-–—\"'()[]{}".indexOf(c) != -1;
     }
 
-    /**
-     * Повертає оброблений текст як рядок.
-     *
-     * @return оброблений текст
-     */
     public String processAndToString() {
-        if (sentences.isEmpty()) return "";
+        if (sentences.isEmpty()) {
+            return "";
+        }
+
         StringBuilder result = new StringBuilder();
         for (int i = 0; i < sentences.size(); i++) {
-            if (i > 0) result.append(' ');
+            if (i > 0) {
+                result.append(' ');
+            }
             result.append(sentences.get(i));
         }
         return result.toString();
